2010-08-17  Vadim Kurland  <vadim@vk.crocodile.org>

	* safety_net_acl: fixed #1687 "temporary access list commands
	syntax is incorrect". Temporary ACL generated for the Procurve
	platform was incorrect.

	* PolicyCompiler_cisco.cpp (PolicyCompiler_cisco::setAllNetworkZonesToAny): 
	fixed #1690 "IOS ACL and Procurve ACL compilers fail because
	interfaces are not assumed to have network zone "any" anymore".
	Compilers for Cisco IOS ACL and Procurve ACL always assumed all
	interfaces have network zone "any". Recent changes made in 4.1.0
	changed that and compilers stopped working for some rule configurations.

	* (PolicyCompiler_cisco::createACLObject): fixed #1688 "Procurve
	ACL remarks should be in quotes if they include space"

2010-08-14  Vadim Kurland  <vadim@vk.crocodile.org>

	* FirewallInstallerProcurve.cpp (FirewallInstallerProcurve::packInstallJobsList): 
	Policy installer for HP Procurve. Currently only works in line-by-line
	mode (no support for scp). Tested with Procurve firmware K14.31 on
	ProCurve J9470A Switch 3500-24. Caveat: manager access should not be
	configured with user name (that is, no "password manager user-name foo")

	* set version to 4.1.1
	
2010-08-10  Vadim Kurland  <vadim@vk.crocodile.org>

	* v4.1.0 released

2010-08-08  Vadim Kurland  <vadim@vk.crocodile.org>

	* ObjectManipulator_ops.cpp (ObjectManipulator::actuallyDeleteObject):
	fixed #1674 "Crash while using Undo Stack". Operation "Cut" should be
	represented by an undo macro object and should appear as one operation
	on the undo stack.

	* ObjectManipulator.cpp (ObjectManipulator::getMenuState): fixed #1676
	"Crash when deleting an interface that has multiple IP addresses
	and not all addresses are selected for deletion"

2010-08-06  vadim  <vadim@vk.crocodile.org>

	* ObjectManipulator_tree_ops.cpp (ObjectManipulator::clearObjects):
	fixed crash that happened on Mac if the GUI was started with a
	file name as command line argument. The issue was introduced recently